# AgenticAi

./: README.md
Agent/BasicChatBot/: .gitignore  pyproject.toml
Agent/BasicChatBot/1-BasicChatBot/: .env  2-humanintheloop.ipynb
Agent/BasicChatBot/1-BasicChatBot/3-debugging/: debugging.ipynb
Agent/BasicChatBot/1-BasicChatBot/multiAIAgent/: multiaiagent.ipynb
Agent/MCPDemoLangchain/: .env  mathMcpServer.py  mcpClient.py  pyproject.toml  weatherMCPServer.py
Agent/agentic-weather-langgraph/: .env  .gitignore  PROJECT.md  README.md  agent.py  config.py  langgraph_weather_agent.py  llm_prompts.py  requirements.txt  tool_base.py  tools.py  weather_agent.py
Agentic AI/agentic-weather-langgraph/: llm_provider.py  pyproject.toml
Agentic AI/agentic-weather-langgraph/memory/: notes.jsonl
Agents/BasicChatBot/: requirements.txt
Agents/BasicChatBot/1-BasicChatBot/: 1-basicchatbot.ipynb
Agents/MCPDemoLangchain/: .gitignore  requirements.txt
